# c_neural_net_mnist

./: CMakeLists.txt  io_util.c  io_util.h  main.c  mnist.c  mnist.h  render.c  render.h  setup-data.sh
app/: app.c  app.h  colors.c  colors.h  data_viewer.c  data_viewer.h  state.c  state.h
